--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "build:static": "node scripts/build-static.js",
+    "postbuild": "npm run build:static"
   },
   "repository": {
     "type": "git",
